--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -75,7 +75,7 @@
                         </ul>
                         <div class="taskbox lightblue">
                             <%= render "tasks/tasks" %>
-                            
+                            <%= render "tasks/taskbuttons" %>
                         </div>
                         <!-- comments included here from tasks partial -->
                     </section> 
