--- a/app/views/user_mailer/contact_form.text.erb
+++ b/app/views/user_mailer/contact_form.text.erb
@@ -2,7 +2,7 @@ Submission from prepared.ly
 ===============================================
 A Prepared.ly user just submitted a question:
    
-<%= @contact.name %>
-<%= @contact.email %>
-<%= @contact.subject %>
-<%= @contact.body %>
+Name: <%= @contact.name %>
+Email: <%= @contact.email %>
+Request type: <%= @contact.contact_type %>
+Message: <%= @contact.body %>
