--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#">account <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><%= render 'devise/menu/login_items' %></li>
+                <%= render 'devise/menu/login_items' %>
               </ul>
             </li>
           </ul>
