--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -1,5 +1,5 @@
 <div id="retask">
-    <div class="contentbox">
+    <div class="contentbox contentbox-main">
         <h1><%= @random.task %></h1>
         <p><%= @random.detail %></p>   
     </div>
@@ -10,21 +10,9 @@
             <div class="triangle-top-box">
                 <h2>On the scale, this is:</h2>
                 <p><%= @random.difficulty %></p>
-                <div class ="easy">
+                 <div class ="<%= @random.difficulty %>">
                 </div>
-            </div>  
-            <div class="triangle-top">
-            </div>       
-            <div class="triangle-top-box">         
-                <h2>add some knowledge:</h2>
-                <div class="controls">
-                    <input type="text" class="input-xlarge" id="taskknow">
-                    <div class="createtask">
-                        <%= link_to '<i class="icon-pencil icon-white"></i> Create a new task'.html_safe, new_task_path, :class =>  'btn-info btn' %>
-                        <a class="btn btn-succsss">Submit</a>
-                    </div>
-                </div>
-            </div>  
+            </div>        
         </div>   
         <div class="span6">
             <div class="triangle-top">
@@ -33,37 +21,110 @@
                 <h2>Why is this important?</h2>
                 <p><%= @random.fact %></p>
             </div>
-            <div class="triangle-top">
+        </div>    
+    </div> 
+    <!-- activity feed currently disabled until further notice ->
+        <!- <div class="triangle-top">
             </div>       
              <div class="triangle-top-box">                     
                 <h2>Activity feed:</h2>
                 <p>Activity feed goes here</p>
-            </div>
-        </div>
-    </div> 
-    <div id="comments">
-        <h3>Comments</h3>
-        <!-- comments will load in here via ajax -->
-    </div>
-    <div>    
-        <h2>Add a comment:</h2>
-        <%= form_for([@random, @random.comments.build], :id => 'new_comment') do |f| %>
-        <div class="field">
-          <%= f.label :name %>
-          <%= f.text_field :name, :id => 'new_comment_name' %>
-        </div>
-        <div class="field">
-          <%= f.label :body %>
-          <%= f.text_area :body, :id => 'new_comment_body' %>
-        </div>
-        <div class="actions">
-          <%= f.submit %>
-        </div>
-        <% end %>
-    </div>
+            </div> 
+        </div>-->
+        <div class="contentbox">         
+                <h2> Comments            
+                <%= link_to '<i class="icon-comment icon-white"></i> add some knowledge' .html_safe, "#comment", :class => 'btn-large btn-info btn', :data => {:toggle => "modal"}%>
+                </h2> 
+                <!-- comments will load in here via ajax -->
+        <div id="comments">
+        </div>  
 </div>
 
-
-
-            
-
+<!-- //////////////////// comment modal //////////////// -->
+<div id="comment" class="modal hide fade">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal">&times;</button>
+    <h3>Add some knowledge:</h3>
+  </div>
+  <div class="modal-body">
+            <%= form_for([@random, @random.comments.build], :id => 'new_comment') do |f| %>
+            <div class="field">
+              <%= f.label :name %>
+              <%= f.text_field :name, :id => 'new_comment_name' %>
+            </div>  
+            <div class="field">
+              <%= f.label :type %>
+              <select class="span3">
+                <option>wisdom to add</option>
+                <option>supplementary task</option>
+                <option>feedback about how it went</option>
+                <option>submit a helpful product</option>
+                <option>submit a photo</option>
+                </select>
+            </div>
+            <div class="field">
+              <%= f.label :body %>
+              <%= f.text_area :body, :id => 'new_comment_body' %>
+            </div>
+            <div class="actions modal-footer">
+              <%= f.submit %>
+                  <a href="#" class="btn" data-dismiss="modal" >Close</a>
+            <% end %>
+            </div>  
+  </div>
+</div>
+<!-- //////////////////// done modal //////////////// -->
+<div id="done" class="modal hide fade">
+    <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h3>You did it!</h3>
+    </div>
+    <div class="modal-body">
+          <p> One small step for your house, one giant step for neighborhoodkind. . .    </p> 
+          <p> How'd it go? <a href "">skip this</a></p>
+          <ul>
+            <li> good</li>
+            <li> ok </li>
+            <li> terrible </li>
+          </ul>
+            <%= form_for([@random, @random.comments.build], :id => 'new_comment') do |f| %>
+            <div class="field">
+              <%= f.label :name %>
+              <%= f.text_field :name, :id => 'new_comment_name' %>
+            </div>  
+            <div class="field">
+                <%= f.label :type %>
+                <select class="span3">
+                    <option>wisdom to add</option>
+                    <option>supplementary task</option>
+                    <option>feedback about how it went</option>
+                    <option>submit a helpful product</option>
+                    <option>submit a photo</option>
+                </select>
+            </div>
+            <div class="field">
+              <%= f.label :body %>
+              <%= f.text_area :body, :id => 'new_comment_body' %>
+              <%= f.submit %>
+            <% end %>
+            </div>
+    </div>
+    <div class="actions modal-footer">
+<!-- //////////////////// share //////////////// -->
+            <div class="btn-group pull-right">
+                    <a class="btn-success btn dropdown-toggle" data-toggle="dropdown" href="#">
+                      <i class="icon-share icon-white"></i> Share
+                      <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                      <!-- dropdown menu links -->
+                      <li>Facebook</li>
+                      <li>Twitter </li>
+                      <li>Email</li>
+                    </ul>
+            </div>    
+              <%= link_to '<i class="icon-ok icon-white"></i> Give me another!'.html_safe, { :controller => 'completed_tasks', :action => 'completed' }, :class => 'btn-success btn' -%> 
+              <%= link_to '<i class="icon-pencil icon-white"></i> Create a new task'.html_safe, new_task_path, :class => 'btn-info btn' %>
+              <a href="#" class="btn" data-dismiss="modal" >Close</a>
+    </div>
+</div>
