--- a/app/views/users/get.html.erb
+++ b/app/views/users/get.html.erb
@@ -1,8 +1,10 @@
 <h2>Additional Info</h2>
 <p>We're almost there! Please confirm the following information</p>
 
+
 <%= form_for(@user, { :action => "update" }) do |f| %>
 
+<%= f.error_messages %>
 <div>
 <%= f.label :email %><br />
 <%= f.email_field :email %>
@@ -18,5 +20,6 @@
 </div>
 
 <div><%= f.submit "Let's go!" %></div>
+
 
 <% end %>
