--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -4,5 +4,5 @@
 	</li>
 <% else %>
 	<li><%= link_to('Register', new_user_registration_path)  %></li>
-	<li><a data-toggle="methododal" href="#signin" >Sign in</a></li>
+	<li><a data-toggle="modal" href="#signin" >Sign in</a></li>
 <% end %>
