--- a/app/views/map/post.js.erb
+++ b/app/views/map/post.js.erb
@@ -20,7 +20,7 @@ $("#mapinfo").html("<%= escape_javascript(render(:partial => 'map/mapinfo')) %>"
 
     $("#warnings-trigger").click(function(e){
       $("#warnings").show();
-      $("#map").hide();
+      //$("#map").hide();
     });
 
     $("#remove-warnings").click(function(e){
