--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
             <p class="lead">Make staying prepared for wildfire fun and easy.</p>
                     <p>Already a user? <a href="/users/sign_in">Log in here</a>.</p>
                     <div class="sub-section">
-                        <div class="task-butt"><a href="#map-section" class="btn-large btn-info btn"> take the tour</a>
+                        <div class="index-butt topjumbobtns"><a href="#map-section" class="btn-large btn-info btn"> take the tour</a>
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <%= link_to ' Create an account '.html_safe,  new_user_registration_path, :class => 'btn-large btn-success btn' %>
                         <hr></hr>
@@ -21,9 +21,9 @@
             <div class="subnav">
               <ul class="nav nav-pills">
                 <li><a href="#map-section">1. explore your location risk</a></li>
-                <li><a href="#task-section">2. get action with easy tasks</a></li>
+                <li><a href="#task-section">2. what should you do?</a></li>
                 <li><a href="#notify-section">3. stay notified</a></li>
-                <li><a href="#account-section">4. get started</a></li>
+                <li><a href="#account-section">4. get started in your community</a></li>
               </ul>
             </div>
           </header>
@@ -37,7 +37,7 @@
             <div class="sub-section">
                 <p>Enter your address and we'll tell you about the risk of your location.</p>
                 <div class="controls">
-                    <div class="task-butt">
+                    <div class="index-butt">
                         <%= text_field_tag(:q, nil,  :value => '123 Main St. Austin, TX', :class => 'address form-inline input-xx-large') %><%= submit_tag("Load my map", :class => 'btn-success btn mapbutton') %>
                         <hr></hr>    
                     </div>
@@ -50,7 +50,7 @@
             <p>Use this tool to accept or decline tasks, as well as get some background on why they are important. Think something's important that you don't see? You'll have the ability to add your own, and share it with your neighbors.</p>
             <img src="assets/Preparedly-task-img.png">
             <div class="sub-section">
-                <div class="task-butt"><%= link_to '<i class="icon-fire icon-white"></i> Get started >>'.html_safe,  tasks_path, :class => 'btn-large btn-success btn' %>
+                <div class="index-butt"><%= link_to '<i class="icon-fire icon-white"></i> Get started >>'.html_safe,  tasks_path, :class => 'btn-large btn-success btn' %>
                     <hr></hr>
                 </div>
             </div>    
@@ -60,7 +60,7 @@
                 <h2>3. Set up notifications to stay on top of things, and up to date with weather conditions.</h2> 
                 <p>Set up custom alerts so that you can decide when you want to schedule a task, and be aware of high alert days and changes in weather conditions. We only want to notify you of things you want to know about, and promise not to send you messages that you didn't ask for. </p>
                 <div class="sub-section">
-                    <div class="task-butt"> 
+                    <div class="index-butt"> 
                         <a href="../users/edit" class="btn btn-large btn-success">set your notifications preferences >></a>
                         <hr></hr>
                     </div>
@@ -69,7 +69,7 @@
                 <h2>Stay in touch with the Fire Department.</h2>
                 <p> The fire department is here to help. Schedule an assessment, or ask a question. </p>
                 <div class="sub-section">
-                    <div class="task-butt"><%= link_to '<i class="icon-fire icon-white"></i> Contact the Fire Department >>'.html_safe,  contacts_path, :class => 'btn-large btn-success btn' %>
+                    <div class="index-butt"><%= link_to '<i class="icon-fire icon-white"></i> Contact the Fire Department >>'.html_safe,  contacts_path, :class => 'btn-large btn-success btn' %>
                         <hr></hr>
                     </div>
                 </div>    
@@ -80,9 +80,11 @@
                     <iframe src="http://player.vimeo.com/video/44008140" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> 
                     <p><a href="http://vimeo.com/44008140">Prepared.ly</a> from <a href="http://vimeo.com/codeforamerica">Code for America</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
                 </div>
-                <p>Now that we've told you a little about Prepared.ly and what we do, continue on the check out our features by creating a free account. Also, feel free to leave us comments and questions with the "feedback" tab on the left side of the page, or send us an email at <a href="mailto:austin@codeforamerica.org">austin@codeforamerica.org</a> at any time.
+                <p>Now that we've told you a little about Prepared.ly and what we do, continue on the check out our features by creating a free account. Also, feel free to leave us comments and questions with the "feedback" tab on the left side of the page, or send us an email at <a href="mailto:austin@codeforamerica.org">austin@codeforamerica.org</a> at any time.</p>
                    <div class="sub-section">
-                        <div class="task-butt"><%= link_to ' Create an account <i class="icon-thumbs-up icon-white"></i>'.html_safe,  new_user_registration_path, :class => 'btn-large btn-success btn' %>
+                        <div class="index-butt">
+                                            <%= link_to ' Bring Prepared.ly to your community '.html_safe,  new_user_registration_path, :class => 'btn-large btn-info btn' %>
+                                            <%= link_to ' Create an account <i class="icon-thumbs-up icon-white"></i>'.html_safe,  new_user_registration_path, :class => 'btn-large btn-success btn' %>
                             <hr></hr>
                         </div>
                     </div>     
