--- a/app/views/users/get.html.erb
+++ b/app/views/users/get.html.erb
@@ -1,6 +1,7 @@
 <h2>Additional Info</h2>
-<p>We're almost there! Please confirm the following information</p>
 
+<p>We're almost there! Please confirm the following information</p>
+<p id="notice"><%= alert %></p>
 
 <%= form_for(@user, { :action => "update" }) do |f| %>
 
