--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1735,7 +1735,12 @@ section h2 {
     text-transform:uppercase;   
    	padding-top:10px;
 }
-
+.triangle-top-box h2{
+  padding: 10px 10px 0 10px;
+}
+.triangle-top-box p {
+  margin: 0px 0px 0px 10px; 
+}
 .contentbox p, .triangle-top-box p{
     font-size: 17px;
     font-weight: 300;
@@ -1774,7 +1779,9 @@ section h2 {
 .task-butt a, .createtask a .index-butt a{
 	color: #ffffff;
 }
-
+.modal-footer a {
+  color: #333333;
+}
 .dash-tabs > li > a:hover {
   text-decoration: none;
   background-color: #ABDAE2;
