moved video to top of index page and changed share page link to go to dashboard

--- a/app/views/share/index.html.erb
+++ b/app/views/share/index.html.erb
@@ -47,7 +47,7 @@ Share Link: <input size=35 value="http://www.prepared.ly/?ref=<%= @share_code %>
           Want to start getting more prepared <em>right now</em>? 
     </h4>
     <br>
-    <a href="/tasks"><button class="btn btn-success btn-large"> <i class="icon-fire icon-white"></i> Get started! </button></a>
+    <a href="../"><button class="btn btn-success btn-large"> <i class="icon-fire icon-white"></i> Get started! </button></a>
     <br>
 </div>
 <!--
