--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
             <p class="lead">Make staying prepared for wildfire fun and easy.</p>
                     <p>Already a user? <a href="/users/sign_in">Log in here</a>.</p>
                     <div class="sub-section">
-                        <div class="index-butt topjumbobtns"><a href="#map-section" class="btn-large btn-info btn"> take the tour</a>
+                        <div class="index-butt topjumbobtns"><a href="#intro" class="btn-large btn-info btn"> take the tour</a>
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <%= link_to ' Create an account '.html_safe,  new_user_registration_path, :class => 'btn-large btn-success btn' %>
                         <hr></hr>
@@ -20,37 +20,48 @@
                     </div>  
             <div class="subnav">
               <ul class="nav nav-pills">
-                <li><a href="#map-section">1. explore your location risk</a></li>
-                <li><a href="#task-section">2. what should you do?</a></li>
-                <li><a href="#notify-section">3. stay notified</a></li>
-                <li><a href="#account-section">4. get started in your community</a></li>
+                <li><a href="#intro">1. an intro</a></li>
+                <li><a href="#map-section">2. explore your location</a></li>
+                <li><a href="#task-section">3. get prepared </a></li>
+                <li><a href="#notify-section">4. stay notified</a></li>
+                <li><a href="#account-section">5. get started </a></li>
               </ul>
             </div>
           </header>
-<div class="container-fluid">  
+<div class="container-fluid">
+    <section id="intro">  
+            <div class="video">
+                <iframe src="http://player.vimeo.com/video/44008140" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> 
+                <p><a href="http://vimeo.com/44008140">Prepared.ly</a> from <a href="http://vimeo.com/codeforamerica">Code for America</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
+            </div>
+            <h2>1. Nice to meet you. </h2>
+            <p>Get to know Prepared.ly a little better by checking out our video. We're brought to you by the City of Austin and Code for America, and we're here to help you stay more prepared for wildfire.</p>
+            <div class="sub-section">
+                <div class="index-butt">
+                    <a href="#map-section" class="btn-large btn-success btn"> explore your location </a>
+                    <hr></hr>
+                </div>
+            </div>  
+    </section>
     <section id="map-section">       
-        <%= form_tag("/map") do %>
             <h2>1. Enter your address, and see your house on the map.</h2> 
             <p>You'll also see an assessment of your risk level, current weather conditions, and burn ban information.
             </p>
             <img src="assets/map.jpg">
             <div class="sub-section">
-                <p>Enter your address and we'll tell you about the risk of your location.</p>
-                <div class="controls">
-                    <div class="index-butt">
-                        <%= text_field_tag(:q, nil,  :value => '123 Main St. Austin, TX', :class => 'address form-inline input-xx-large') %><%= submit_tag("Load my map", :class => 'btn-success btn mapbutton') %>
-                        <hr></hr>    
-                    </div>
+                <div class="index-butt">
+                    <a href="#task-section" class="btn-large btn-success btn"> get prepared  </a>
+                    <hr></hr>
                 </div>
-            <% end %>
-        </div>
+            </div> 
     </section> 
     <section id="task-section">  
             <h2>2. Stay prepared with the abilty to accept, share, and create tasks for you and your neighborhood via text, email or Twitter.</h2>
             <p>Use this tool to accept or decline tasks, as well as get some background on why they are important. Think something's important that you don't see? You'll have the ability to add your own, and share it with your neighbors.</p>
             <img src="assets/Preparedly-task-img.png">
             <div class="sub-section">
-                <div class="index-butt"><%= link_to '<i class="icon-fire icon-white"></i> Get started >>'.html_safe,  tasks_path, :class => 'btn-large btn-success btn' %>
+                <div class="index-butt">
+                    <a href="#notify-section" class="btn-large btn-success btn"> stay notified  </a>
                     <hr></hr>
                 </div>
             </div>    
@@ -61,7 +72,6 @@
                 <p>Set up custom alerts so that you can decide when you want to schedule a task, and be aware of high alert days and changes in weather conditions. We only want to notify you of things you want to know about, and promise not to send you messages that you didn't ask for. </p>
                 <div class="sub-section">
                     <div class="index-butt"> 
-                        <a href="../users/edit" class="btn btn-large btn-success">set your notifications preferences >></a>
                         <hr></hr>
                     </div>
                 </div>    
@@ -76,14 +86,15 @@
     </section>  
     <section id="account-section"> 
                 <h2>4. Create an account, keep track of your progress</h2>
-                <div class="video">
-                    <iframe src="http://player.vimeo.com/video/44008140" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> 
-                    <p><a href="http://vimeo.com/44008140">Prepared.ly</a> from <a href="http://vimeo.com/codeforamerica">Code for America</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
-                </div>
+
                 <p>Now that we've told you a little about Prepared.ly and what we do, continue on the check out our features by creating a free account. Also, feel free to leave us comments and questions with the "feedback" tab on the left side of the page, or send us an email at <a href="mailto:austin@codeforamerica.org">austin@codeforamerica.org</a> at any time.</p>
+                <p> Interested in launching prepared.ly in your state, city or neighborhood? Get in touch. </p>
+                <p>
+                <a href="https://docs.google.com/a/codeforamerica.org/spreadsheet/viewform?formkey=dGdNS1BCMU1wMVZYNzNiN2k2anI0MWc6MQ#gid=0" target="blank"> I want to bring Prepared.ly to my community.</a>
+                </p>
                    <div class="sub-section">
                         <div class="index-butt">
-                                            <%= link_to ' Bring Prepared.ly to your community '.html_safe,  new_user_registration_path, :class => 'btn-large btn-info btn' %>
+                                            
                                             <%= link_to ' Create an account <i class="icon-thumbs-up icon-white"></i>'.html_safe,  new_user_registration_path, :class => 'btn-large btn-success btn' %>
                             <hr></hr>
                         </div>
