change weird behavior where 'I did it' button was redirecting to survey

--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -14,8 +14,10 @@
         <%= render "layouts/usernavigation-side" %>
         <div class="container-fluid">
             <div class="span9">
+            <p id="notice"><%= alert %></p>
                 <div class="tab-content">
                     <%= notice %>
+
    
 <!-- //////////////////// Map ///////////////////////// -->        
                     <section id="map-section" class="tab-pane"> 
