--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -113,4 +113,13 @@
         </div>
     </div>
 </div>
-
+<script>
+//-- task window -->
+$("#skip").click(function(e){
+  e.preventDefault();   
+  $.get("/tasks-partial",
+      function(response) {
+        $("#retask").html(response);
+  });
+});
+</script>
