--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -31,29 +31,36 @@
                 <p>Activity feed goes here</p>
             </div> 
         </div>-->
-        <div class="contentbox">         
-                <h2> Comments            
-                <%= link_to '<i class="icon-comment icon-white"></i> add some knowledge' .html_safe, "#comment", :class => 'btn-large btn-info btn', :data => {:toggle => "modal"}%>
-                </h2> 
-                <!-- comments will load in here via ajax -->
-        <div id="comments">
-        </div>  
-</div>
-
-<!-- //////////////////// comment modal //////////////// -->
-<div id="comment" class="modal hide fade">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal">&times;</button>
-    <h3>Add some knowledge:</h3>
-  </div>
-  <div class="modal-body">
-            <%= form_for([@random, @random.comments.build], :id => 'new_comment') do |f| %>
+    <div class="contentbox">         
+        <h2>Comments</h2>
+        <p>Do you know of a product that helps with this task? Run into any trouble while doing it? Easier than expected? Have a related suggestion? Please let us know in the comments.</p>         
+        <%#= link_to '<i class="icon-comment icon-white"></i> add some knowledge' .html_safe, "#comment", :class => 'btn-large btn-info btn', :data => {:toggle => "modal"}%>
+        <%= form_for([@random, @random.comments.build], :id => 'new_comment') do |f| %>
             <div class="field">
               <%= f.label :name %>
               <%= f.text_field :name, :id => 'new_comment_name' %>
             </div>  
             <div class="field">
-              <%= f.label :type %>
+              <%= f.label :comment %>
+              <%= f.text_area :body, :id => 'new_comment_body' %>
+            </div>
+            <!-- <div class="actions modal-footer"> -->
+              <%= f.submit 'Add your knowledge!', :class => 'btn-large btn-info btn' %>
+                  <!-- <a href="#" class="btn" data-dismiss="modal" >Close</a> -->
+        <% end %>
+        <div id="comments">
+            <!-- comments will load in here via ajax -->
+        </div>  
+    </div>
+</div>
+<!-- //////////////////// comment modal //////////////// -->
+<!-- <div id="comment" class="modal hide fade">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal">&times;</button>
+    <h3>Add some knowledge:</h3>
+  </div>
+    <div class="modal-body">
+       
             <!--not doing anything for now -->
             <!--  <select class="span3">
                 <option>wisdom to add</option>
@@ -61,17 +68,8 @@
                 <option>feedback about how it went</option>
                 <option>submit a helpful product</option>
                 <option>submit a photo</option>
-                </select> -->
-            </div>
-            <div class="field">
-              <%= f.label :body %>
-              <%= f.text_area :body, :id => 'new_comment_body' %>
-            </div>
-            <div class="actions modal-footer">
-              <%= f.submit %>
-                  <a href="#" class="btn" data-dismiss="modal" >Close</a>
-            <% end %>
-            </div>  
+                </select>
+          
   </div>
-</div>
+</div> -->
 
