fix number typo on index, removed numbers completely

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,11 +20,11 @@
                     </div>  
             <div class="subnav">
               <ul class="nav nav-pills">
-                <li><a href="#intro">1. an intro</a></li>
-                <li><a href="#map-section">2. explore your location</a></li>
-                <li><a href="#task-section">3. get prepared </a></li>
-                <li><a href="#notify-section">4. stay notified</a></li>
-                <li><a href="#account-section">5. get started </a></li>
+                <li><a href="#intro"> an intro</a></li>
+                <li><a href="#map-section"> explore your location</a></li>
+                <li><a href="#task-section"> get prepared </a></li>
+                <li><a href="#notify-section"> stay notified</a></li>
+                <li><a href="#account-section"> get started </a></li>
               </ul>
             </div>
           </header>
@@ -34,7 +34,7 @@
                 <iframe src="http://player.vimeo.com/video/44008140" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> 
                 <p><a href="http://vimeo.com/44008140">Prepared.ly</a> from <a href="http://vimeo.com/codeforamerica">Code for America</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
             </div>
-            <h2>1. Nice to meet you. </h2>
+            <h2> Nice to meet you. </h2>
             <p>Get to know Prepared.ly a little better by checking out our video. We're brought to you by the City of Austin and Code for America, and we're here to help you stay more prepared for wildfire.</p>
             <div class="sub-section">
                 <div class="index-butt">
@@ -44,7 +44,7 @@
             </div>  
     </section>
     <section id="map-section">       
-            <h2>1. Enter your address, and see your house on the map.</h2> 
+            <h2> Enter your address, and see your house on the map.</h2> 
             <p>You'll also see an assessment of your risk level, current weather conditions, and burn ban information.
             </p>
             <img src="assets/map.jpg">
@@ -56,7 +56,7 @@
             </div> 
     </section> 
     <section id="task-section">  
-            <h2>2. Stay prepared with the abilty to accept, share, and create tasks for you and your neighborhood via text, email or Twitter.</h2>
+            <h2> Stay prepared with the abilty to accept, share, and create tasks for you and your neighborhood via text, email or Twitter.</h2>
             <p>Use this tool to accept or decline tasks, as well as get some background on why they are important. Think something's important that you don't see? You'll have the ability to add your own, and share it with your neighbors.</p>
             <img src="assets/Preparedly-task-img.png">
             <div class="sub-section">
@@ -68,7 +68,7 @@
     </section>
     <section id="notify-section"> 
                  <img src="assets/notify.png">   
-                <h2>3. Set up notifications to stay on top of things, and up to date with weather conditions.</h2> 
+                <h2> Set up notifications to stay on top of things, and up to date with weather conditions.</h2> 
                 <p>Set up custom alerts so that you can decide when you want to schedule a task, and be aware of high alert days and changes in weather conditions. We only want to notify you of things you want to know about, and promise not to send you messages that you didn't ask for. </p>
                 <div class="sub-section">
                     <div class="index-butt"> 
@@ -85,7 +85,7 @@
                 </div>    
     </section>  
     <section id="account-section"> 
-                <h2>4. Create an account, keep track of your progress</h2>
+                <h2> Create an account, keep track of your progress</h2>
 
                 <p>Now that we've told you a little about Prepared.ly and what we do, continue on the check out our features by creating a free account. Also, feel free to leave us comments and questions with the "feedback" tab on the left side of the page, or send us an email at <a href="mailto:austin@codeforamerica.org">austin@codeforamerica.org</a> at any time.</p>
                 <p> Interested in launching prepared.ly in your state, city or neighborhood? Get in touch. </p>
@@ -93,9 +93,8 @@
                 <a href="https://docs.google.com/a/codeforamerica.org/spreadsheet/viewform?formkey=dGdNS1BCMU1wMVZYNzNiN2k2anI0MWc6MQ#gid=0" target="blank"> I want to bring Prepared.ly to my community.</a>
                 </p>
                    <div class="sub-section">
-                        <div class="index-butt">
-                                            
-                                            <%= link_to ' Create an account <i class="icon-thumbs-up icon-white"></i>'.html_safe,  new_user_registration_path, :class => 'btn-large btn-success btn' %>
+                        <div class="index-butt">                    
+                        <%= link_to ' Create an account <i class="icon-thumbs-up icon-white"></i>'.html_safe,  new_user_registration_path, :class => 'btn-large btn-success btn' %>
                             <hr></hr>
                         </div>
                     </div>     
