--- a/app/views/map/_mapinfo.html.erb
+++ b/app/views/map/_mapinfo.html.erb
@@ -166,6 +166,7 @@ if($("#mapinfo").length > 0){
     setupMap();
     $("#fetchaddress").submit(function(e){
         e.preventDefault();
+        $("#mapinfo").html("<img src='assets/ajax-loader.gif'>");
 
         $.ajax("/mapinfo", {data:{q:$(this).find("input#q").val()},success:function(data){
             updateMap(data);
