add full image url in fb meta tag; add note on views/map/get that page is for testing and will be removed since a tester found it on staging

--- a/app/views/map/get.html.erb
+++ b/app/views/map/get.html.erb
@@ -1,4 +1,4 @@
-    <h1> this is map/get.html.erb </h1>
+    <h2> this is map/get.html.erb.. if you've reached this page, please go back to the home page and sign in to view the map in your user dashboard, this page is just here for testing and will be removed soon! </h2>
         <header class="jumbotron subhead" id="overview">
             <h1>Welcome, let's get started. </h1>
             <p class="lead">Make staying prepared for wildfire fun and easy.</p>
