--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= yield :fb_og_tags %>
   <meta property="og:site_name" content="Prepared.ly"/>
   <meta property="og:title" content="Prepared.ly" />
-  <meta property="og:image" content="/assets/preparedly-red.png"/>
+  <meta property="og:image" content="http://www.prepared.ly/assets/preparedly-red.png"/>
   <meta property="og:description"
           content="Prepared.ly is a simple way for you to stay informed and proactive about the ongoing threat of wildfires."/>
   <%= stylesheet_link_tag "jquery-ui" %>
